--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
     <title>Site do Allan</title>
+    <style>
+        body{
+            background-color:aqua;
+            color:azure;
+        }
+    </style>
 </head>
 
 <body>
