--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Site do Allan</title>
     <style>
         body{
-            background-color:black
-            color:aqua
+            background-color:black;
+            color:blue;
         }
     </style>
 </head>
