--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         body{
             background-color:black;
             color:blue;
+            text-align: center;
         }
     </style>
 </head>
