--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li>Vercel</li>
         <li>VSCode</li>
     </ol>
+    <img src="https://images.pexels.com/photos/30635128/pexels-photo-30635128/free-photo-of-chapim-real-em-galho-coberto-de-liquen-no-outono.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"/>
 </body>
 
 </html>
