--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             height: 500px;
             border: 3px solid black;
         }
+
+        div{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -38,7 +47,12 @@
         <li>Vercel</li>
         <li>VSCode</li>
     </ol>
-    <img src="https://images.pexels.com/photos/30635128/pexels-photo-30635128/free-photo-of-chapim-real-em-galho-coberto-de-liquen-no-outono.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"/>
+
+    <div>
+    
+    <img
+     src="https://images.pexels.com/photos/30635128/pexels-photo-30635128/free-photo-of-chapim-real-em-galho-coberto-de-liquen-no-outono.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"/>
+</div>
 </body>
 
 </html>
