mudansa da borda

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         img:hover{
-            border: 3px dashed blue;
+            border: 3px dotted blue;
             transform: scale(1.2);
         }
     </style>
