--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-    <h1 class="pt serif-regular">Meu primeiro site online</h1>
+    <h1 class="pt-serif-regular">Meu primeiro site online</h1>
     <p>Neste site eu utilizei as tecnologias:</p>
     <ul>
         <li>HTML</li>
