--- a/index.html
+++ b/index.html
@@ -59,16 +59,26 @@
   font-weight: 700;
   font-style: italic;
 }
-
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
     </style>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=settings_accessibility" />
 </head>
 
 <body>
     <h1 class="pt-serif-regular">Meu primeiro site online</h1>
+    <span class="material-symbols-outlined">
+        settings_accessibility
+        </span>
     <p>Neste site eu utilizei as tecnologias:</p>
     <ul>
         <li>HTML</li>
